# mcp-youtrack

./: .gitignore  LICENSE.md  README.md  SETUP.md  env.example  pyproject.toml
src/mcp_youtrack/: __init__.py  __main__.py  http_server.py  models.py  server.py  youtrack_client.py
src/mcp_youtrack/handlers/: __init__.py  comments.py  issues.py  projects.py  work.py
src/mcp_youtrack/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  conftest_integration.py  mock_server.py  test_config.py  test_http_server.py  test_server.py  test_youtrack_client.py
tests/handlers/: test_comments.py  test_issues.py
tests/integration/: test_attachments.py  test_debug.py  test_httpx_upload.py  test_mock_integration.py  test_mockclient_isolation.py  test_real_youtrack.py  test_reset_endpoint.py  test_server_integration.py  test_simple.py
